--- a/design-2/index.html
+++ b/design-2/index.html
@@ -110,18 +110,18 @@
     <img src="https://images.unsplash.com/photo-1508020268086-b96cf4f4bb2e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="bg" />
     <section>
         <div>
-            <img src="https://media-exp1.licdn.com/dms/image/C5603AQG6Q4W3kWANtw/profile-displayphoto-shrink_400_400/0/1630988410582?e=1664409600&v=beta&t=rzwP6ibNcFMEpPJDePHLeQFAvjVMJKDlq8NmBftI9Xw" alt="dp" />
-            <h2>James McArthur</h2>
+            <img src="https://cdn.discordapp.com/attachments/1111615225897173002/1136241658082644038/20230730_124920_0000-1.png" alt="dp" />
+            <h2>@productlin.kss</h2>
             <div>
-                <a href="https://www.linkedin.com/in/jamezmcarthur/">
+                <a href="#">
                     <i class="fa-brands fa-linkedin"></i>
                     <p>LinkedIn</p>
                 </a>
-                <a href="">
+                <a href="#">
                     <i class="fa-brands fa-tiktok"></i>
                     <p>Tiktok</p>
                 </a>
-                <a href="">
+                <a href="#">
                     <i class="fa-brands fa-instagram"></i>
                     <p>Instagram</p>
                 </a>
