--- a/design-5/index.html
+++ b/design-5/index.html
@@ -50,19 +50,19 @@ a:hover {
 <body>
    
     <!-- Profile name-->
-    <div class="profile-name">@mrkishorekumar</div>
+    <div class="profile-name">@demo5</div>
 
     <!-- Links-->
-        <a href="mailto:contact@mrkishorekumar.com" class="links">MAIL</a>
-        <a href="https://www.linkedin.com/in/kishorekumar18" class="links">LINKEDIN</a>
-        <a href="https://www.facebook.com/00kishorekumar" class="links">FACEBOOK</a>
-        <a href="https://mrkishorekumar.com/instagram" class="links">INSTAGRAM</a>
-        <a href="https://twitter.com/kishore36575556" class="links">TWITTER</a>
-        <a href="https://mrkishorekumar.com/youtube" class="links">YOUTUBE</a>
-        <a href="https://github.com/mrkishorekumar" class="links">GITHUB</a>
-        <a href="https://codepen.io/mrkishorekumar/" class="links">CODEPEN</a>
-        <a href="https://t.me/Kishorekumar18" class="links">TELEGRAM</a>
-        <a href="https://www.snapchat.com/add/kishore_031" class="links">SNAPCHAT</a>
+        <a href="mailto:example@gmail.com" class="links">MAIL</a>
+        <a href="https://www.linkedin.com/in/" class="links">LINKEDIN</a>
+        <a href="https://www.facebook.com/" class="links">FACEBOOK</a>
+        <a href="#" class="links">INSTAGRAM</a>
+        <a href="#" class="links">TWITTER</a>
+        <a href="#" class="links">YOUTUBE</a>
+        <a href="#" class="links">GITHUB</a>
+        <a href="#" class="links">CODEPEN</a>
+        <a href="https://t.me/" class="links">TELEGRAM</a>
+        <a href="https://www.snapchat.com/" class="links">SNAPCHAT</a>
      
 </body>
 </html>
