--- a/design-6/index.html
+++ b/design-6/index.html
@@ -89,22 +89,22 @@ li:hover {
         <div class="img-h1">
             <img src="https://yt3.ggpht.com/v1h4qxyGumjoeb6PBScpdh8yxwZA8qVzuiuDh1eb2luYaLEZQDkSW7Za0ViCZV53iNI3SIeD2w=s900-c-k-c0x00ffffff-no-rj" alt="profile picture">
         </div>
-        <div class="img-h1"> <h1>Miftah GanzZ</h1></div>
-        <div class="img-h1 color-blue"> <p>@miftah.azzam</p></div>
+        <div class="img-h1"> <h1>Demo6</h1></div>
+        <div class="img-h1 color-blue"> <p>@demi.profile</p></div>
 
         <ul class="content">
-            <li> <a href="http://youtube.com/channel/MiftahAzzam" target="_blank" rel="noopener noreferrer">🎥 YouTube</a></li>
+            <li> <a href="http://youtube.com/" target="_blank" rel="noopener noreferrer">🎥 YouTube</a></li>
 
-            <li> <a href="http://instagram.com/@miftah.azzam" target="_blank" rel="noopener noreferrer">🤙 Instagram</a></li>
+            <li> <a href="http://instagram.com/" target="_blank" rel="noopener noreferrer">🤙 Instagram</a></li>
 
-            <li> <a href="http://github.com/miftah0908" target="_blank" rel="noopener noreferrer"> 🎉 Github</a></li>
+            <li> <a href="http://github.com/" target="_blank" rel="noopener noreferrer"> 🎉 Github</a></li>
 
-            <li> <a href="http://www.tiktok.com/@miftahbotz" target="_blank" rel="noopener noreferrer">🚗 TikTok</a></li>
+            <li> <a href="http://www.tiktok.com/" target="_blank" rel="noopener noreferrer">🚗 TikTok</a></li>
         </ul>
     </div>
 
     <div style="margin: 25px;" class="img-h1">
-        powered by miftah 💚<a href="#" class="color-blue">Miftah</a>
+        powered by lactusss 💚<a href="#" class="color-blue">lactusss</a>
     </div>
           
 </body>
