--- a/design-9/index.html
+++ b/design-9/index.html
@@ -93,13 +93,13 @@ body{
         <div class="container_foto">
             <img class="foto_img" src="https://i.postimg.cc/zDKkvTQM/ehernandez.jpg" alt="">
         </div>
-        <div class="nombre">Erick Hernández</div>
+        <div class="nombre">demoo</div>
 
     </header>
     <section class="container">
         <div class="container_enlaces">
-            <a href="#" class="enlaces">Mi página web</a>
-            <a href="#" class="enlaces">Podcast Grandes Negocios</a>
+            <a href="#" class="enlaces">1</a>
+            <a href="#" class="enlaces">Podcast 1</a>
             <a href="#" class="enlaces">Github</a>
             <a href="#" class="enlaces">CodePen</a>
             <a href="#" class="enlaces">Twitter</a>
@@ -108,7 +108,7 @@ body{
     </section>
     <footer class="container">
         <div class="footer">
-        Hecho por Erick Hernández
+        @lactusss
         </div>
     </footer>
 </body>
