--- a/design-11/index.html
+++ b/design-11/index.html
@@ -6,14 +6,14 @@
     <title>LinkHub | Links</title>
     <meta
       name="description"
-      content="A link tree alternative created by Rohan Salunkhe that is free to use and modify. Also known as Linkhub"
+      content="A link tree alternative created by free to use and modify. Also known as "
     />
     <meta http-equiv="content-language" content="”en-us”" />
     <meta
       property="og:description"
-      content="A open source linktr.ee alternative created by rohan salunkhe known as amrohan the project is known as LinkHub"
+      content="A open source linktr.ee alternative created by  the project is known as "
     />
-    <meta property="og:url" content="https://linkhub.ml" />
+    <meta property="og:url" content="#" />
 
     <!-- Importing Styles  -->
     <link rel="stylesheet" href="tailwind.css" />
@@ -73,7 +73,7 @@
       />
 
       <!-- Your Name And Paragraph Goes Here -->
-      <h1 class="animate-bounce">Rohan Salunkhe</h1>
+      <h1 class="animate-bounce">name</h1>
       <p class="mb-8 max-w-screen-md items-center text-gray-300 text-center">
         All of my social media links, as well as links to my most recent
         projects, are listed below.
@@ -92,7 +92,7 @@
           items-center
           m-2
         "
-        href="https://rohan.ml/"
+        href="#"
         >Website</a
       >
       <a
@@ -107,7 +107,7 @@
           items-center
           m-2
         "
-        href="https://chathub.gq/"
+        href="#"
         >Chat-Hub</a
       >
       <a
@@ -122,7 +122,7 @@
           items-center
           m-2
         "
-        href="https://github.com/amrohan/ChatBot"
+        href="https://github.com/"
         >Chat-Bot</a
       >
       <a
@@ -137,7 +137,7 @@
           items-center
           m-2
         "
-        href="https://github.com/amrohan/Spotify-Api"
+        href="https://github.com/"
         >Spotify Readme</a
       >
       <a
@@ -152,34 +152,34 @@
           items-center
           m-2
         "
-        href="https://github.com/amrohan/LinkTree-Alternative"
-        >Linktree</a
+        href="https://github.com/"
+        >1</a
       >
 
       <!-- All Socail Links Goes Here -->
       <div class="inline-flex w-56 justify-evenly mt-4 text-xl duration-1000">
         <!-- Instagram -->
-        <a href="https://www.instagram.com/amrohann" target="_blank">
+        <a href="https://www.instagram.com" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
 
         <!-- Telegram -->
-        <a href="https://t.me/amrohan" target="_blank">
+        <a href="https://t.me/" target="_blank">
           <i class="fab fa-telegram"></i>
         </a>
 
         <!-- Twitter -->
-        <a href="https://twitter.com/amrohann" target="_blank">
+        <a href="https://twitter.com/" target="_blank">
           <i class="fab fa-twitter"></i>
         </a>
 
         <!-- Gmail -->
-        <a href="mailto: hello@rohan.ml">
+        <a href="mailto:hello@lactus.tech">
           <i class="fas fa-envelope"></i>
         </a>
 
         <!-- Github -->
-        <a href="https://github.com/amrohan" target="_blank">
+        <a href="https://github.com/" target="_blank">
           <i class="fab fa-github"></i>
         </a>
       </div>
