--- a/design-8/index.html
+++ b/design-8/index.html
@@ -3,7 +3,7 @@
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     
-    <title>OrderMerch Pre-Lander Template</title>
+    <title>lactuss  Template</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -115,7 +115,7 @@ h6 {
     <div class="col-xs-12">
             <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
                 <img class="backdrop linktree">
-                <h2 style="color: #ffffff; padding-top: 20px;">Instagram Growth Expert</h2>
+                <h2 style="color: #ffffff; padding-top: 20px;">@demo.profile</h2>
             </div>
     </div>
     </div>
@@ -125,10 +125,10 @@ h6 {
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='http://bit.ly/2IZURI7'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">15% OFF Instagram Growth</button>
+                    <button onclick="location.href='#'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">15% OFF Instagram Growth</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='http://bit.ly/2SVZXES'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Guide: Increasing Your Engagement</button>
+                    <button onclick="location.href='#'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Guide: Increasing Your Engagement</button>
                 </div>
                 <div style="padding-bottom: 30px;">
                     <button onclick="location.href='#'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">View My YouTube Channel</button>
