--- a/design-15/index.html
+++ b/design-15/index.html
@@ -197,7 +197,7 @@
                                                                 <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://www.linkedin.com/in/SamirPaul"
+                           href="https://www.linkedin.com/in/"
                            data-id="261652" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -211,7 +211,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://www.instagram.com/SamirPaulb"
+                           href="https://www.instagram.com/"
                            data-id="261686" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -225,7 +225,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://www.facebook.com/SamirPaulb"
+                           href="https://www.facebook.com/"
                            data-id="261687" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -239,7 +239,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://twitter.com/SamirPaulb"
+                           href="https://twitter.com/"
                            data-id="261681" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -253,7 +253,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://in.pinterest.com/SamirPaulb"
+                           href="https://in.pinterest.com/"
                            data-id="262545" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -267,7 +267,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://www.reddit.com/user/SamirPaulb"
+                           href="https://www.reddit.com/user/"
                            data-id="261717" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -281,7 +281,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://samirpaul1.github.io/"
+                           href="https://lactus.online/"
                            data-id="261771" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -295,7 +295,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://github.com/SamirPaul1"
+                           href="https://github.com/"
                            data-id="261685" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -309,7 +309,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://leetcode.com/samirpaul1"
+                           href="https://leetcode.com/"
                            data-id="261701" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -323,7 +323,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://www.codechef.com/users/samirpaul1"
+                           href="https://www.codechef.com/"
                            data-id="261707" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -337,7 +337,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://www.hackerrank.com/samirpaul1"
+                           href="https://www.hackerrank.com/"
                            data-id="261709" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -351,7 +351,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://auth.geeksforgeeks.org/user/samirpaul1/practice/"
+                           href="https://geeksforgeeks.org/"
                            data-id="261710" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -365,7 +365,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://samirpaul1.medium.com/"
+                           href="https://medium.com/"
                            data-id="261711" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -379,7 +379,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://devfolio.co/@SamirPaul1"
+                           href="https://devfolio.co/"
                            data-id="261714" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -393,7 +393,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://replit.com/@SamirPaul1"
+                           href="https://replit.com/"
                            data-id="262560" data-type="page_item">
                                                             <img
                                     class="link-each-image"
@@ -407,7 +407,7 @@
                                                                                     <div class="page-item-wrap relative">
                         <div class="page-item flex-both-center absolute"></div>
                         <a target="_blank"  class="page-item-each py-10 flex-both-center"
-                           href="https://www.kooapp.com/profile/SamirPaul"
+                           href="https://www.kooapp.com/"
                            data-id="262840" data-type="page_item">
                                                             <img
                                     class="link-each-image"
