--- a/design-16/beta/index.html
+++ b/design-16/beta/index.html
@@ -8,23 +8,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
-    <title>Chilled Dev</title>
+    <title>@demo-16</title>
 </head>
 
 <body>
     <main>
         <header>
-            <a href="https://www.instagram.com/chilled_dev/" target="_blank">
-                <img src="https://i.imgur.com/C5a03G9.png" alt="luizeduardomr">
-                <h1>Chilled Dev</h1>
-                <p>@chilled_dev</p>
+            <a href="https://www.instagram.com//" target="_blank">
+                <img src="https://i.imgur.com/" alt="luizeduardomr">
+                <h1>@demo-16</h1>
+                <p>@demo-16</p>
             </a>
-            <a href='../index.html' style='color: #79a0db;'>Voltar</a>
+            <a href='../index.html' style='color: #79a0db;'>Back htmlllllll</a>
         </header>
         <h1 class='titulo-sep'>Sobre mim</h1>
         <section>
             <ul>
-                <a href="https://github.com/luizeduardomr/" target="_blank">
+                <a href="https://github.com/" target="_blank">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <i data-feather="github"></i>
@@ -33,7 +33,7 @@
                         </span>
                     </li>
                 </a>
-                <a href="https://www.linkedin.com/in/luizeduardomr/" target="_blank">
+                <a href="https://www.linkedin.com/in/" target="_blank">
                     <li
                         style="background: linear-gradient(to right, #0866C2, #044d96);">
                         <i data-feather="linkedin"></i>
@@ -44,7 +44,7 @@
                 </a>
             </a>
             
-            <a href="https://discord.bio/p/luiz" target="_blank">
+            <a href="https://discord.bio/" target="_blank">
                 <li
                 style="background: linear-gradient(to right, #2673ca, #346485);">
                 <img style="width: 20px;height: 20px; object-fit: fill;" src="../discord.png" alt="Discord logo">
@@ -53,7 +53,7 @@
                     </span>
                 </li>
             </a>
-            <a href="https://app.rocketseat.com.br/me/luizeduardomr" target="_blank">
+            <a href="https://app.rocketseat.com.br/" target="_blank">
                 <li
                 style="background: linear-gradient(to right, #9676FC, #765dca);">
                     <img class="svg-white" src="../svg0.svg" alt="Rocketseat logo">
@@ -63,19 +63,19 @@
                     </span>
                 </li>
             </a>
-            <a href="https://www.instagram.com/luizwhois/" target="_blank">
+            <a href="https://www.instagram.com/" target="_blank">
                 <li
                 style="background: linear-gradient(to right, #8e2de2, #e2c72d);">   
                     <i data-feather="instagram"></i>
                     <span>
-                        Instagram de fotografia
+                        Instagram de @demo-16
                     </span>
                 </li>
             </a>
             </ul>
         </section>
         <hr style="margin-top:10%;height:1px;border-width:0;color:white;background-color:gray">
-        <h1 class='titulo-sep'>Links úteis</h1>
+        <h1 class='titulo-sep'>Links hlohsfteis</h1>
 
         <section>
             <ul>
@@ -83,16 +83,16 @@
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span>
-                            Can I use?
+                            @demo-16
                         </span>
                     </li>
                 </a>
-                <a href="https://medium.com/collabcode/pare-de-chutar-e-aprenda-como-funciona-flexbox-01-f75be5f35d3d" target="_blank">
+                <a href="https://medium.com/" target="_blank">
                     <li
                         style="background: linear-gradient(to right, #0866C2, #044d96);">
                         <span class="new">PT/BR</span>
                         <span>
-                            Artigo sobre Flexbox
+                            @demo-16@demo-16
                         </span>
                     </li>
                 </a>
@@ -101,7 +101,7 @@
                         style="background: linear-gradient(to right, #0866C2, #044d96);">
                         <span class="new">EN</span>
                         <span>
-                            Artigo sobre Flexbox
+                            @demo-16@demo-16Flexnox
                         </span>
                     </li>
                 </a>
@@ -116,8 +116,8 @@
                 </a>
             </ul>
         </section>
-        <h4 class='codeby'>Agradecimento especial para a <wbr> <a style="color:#8e2de2"; href="https://www.instagram.com/girl.coding/" target="_blank">@girl.coding</a> <wbr> pela ideia <wbr>do projeto! <wbr>(Inspirado* 100% nela)!<wbr></h4>
-        <p class='codebyp'>*Este site possui a base de código do projeto dela e foi modificado por mim</p>
+        <h4 class='codeby'>somthing is written 1<wbr> <a style="color:#8e2de2"; href="https://www.instagram.com/" target="_blank">@demo-insta</a> <wbr> somthing is written 1 <wbr>somthing is written 1 <wbr>somthing is written 1<wbr></h4>
+        <p class='codebyp'>somthing is written 1</p>
     </main>
     <script>
         feather.replace()
