--- a/design-16/index.html
+++ b/design-16/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Luiz Mello Links</title>
+     <title>demo16</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="icon" href="https://i.ibb.co/FVM0B7Z/me.jpg">
@@ -50,81 +50,81 @@
             
         </header>
 
-
-        <h1 class='titulo-sep'>Links patrocinados</h1>
+        <!-- https://bit.ly/cursoflutter_luiz -->
+        <h1 class='titulo-sep'>Links patani</h1>
         <section>
             <ul class="patrocinador">
-                <a href="https://bit.ly/cursoflutter_luiz" target="_blank" rel="noopener">
+                <a href="https://r.lactus.online/crss/" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #6b6b6b, #5e8f94);">
                         <span class="new">NEW</span>
                         <span class='uteis'>
-                            Curso de desenvolvimento Mobile com Flutter!
+                            Cuhjhjehfjhwjdh
                         </span>
                     </li>
                 </a>
             </ul>
         </section>
 
-        <h1 class='titulo-sep'>Sobre mim</h1>
+        <h1 class='titulo-sep'>git</h1>
         <section>
             <ul>
-                <a href="https://github.com/luizmellodev/" target="_blank" rel="noopener">
+                <a href="https://github.com/" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <i data-feather="github"></i>
                     </li>
                     <h2>GitHub</h2>
-                    <span class='username'>@luizmellodev</span>    
+                    <span class='username'>@demo-16</span>    
                 </a>
 
 
-                <a href="https://www.linkedin.com/in/luizmellodev/" target="_blank" rel="noopener">
+                <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #0866C2, #044d96);">
                     <i data-feather="linkedin"></i>
                     </li>
                     <h2>LinkedIn</h2>
-                    <span class='username'>@luizmellodev</span>
+                    <span class='username'>@demo-16</span>
                 </a>
                 
-                <a href="https://www.tiktok.com/@euluizmello" target="_blank" rel="noopener">
+                <a href="https://www.tiktok.com/" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #EE1D52, #69C9D0);">   
                     <img class="svg-white" src="tiktok.png" alt="TikTok logo">
                     </li>
                     <h2>TikTok</h2>
-                    <span class='username'>@euluizmello</span>
+                    <span class='username'>@demo-16</span>
                 </a>
 
 
-                <a href="https://discord.bio/p/luiz" target="_blank" rel="noopener">
+                <a href="https://discord.bio/" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #2673ca, #346485);">
                     <img style="width: 30px;height: 30px; object-fit: fill;" src="discord.png" alt="Discord logo">
                 </li>
                     <h2>Discord</h2>
-                    <span class='username'>@luiz</span>
+                    <span class='username'>@demo-16</span>
                 </a>
 
 
 
-                <a href="https://app.rocketseat.com.br/me/luizmellodev" target="_blank" rel="noopener">
+                <a href="https://app.rocketseat.com.br" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #9676FC, #765dca);">
                     <img class="svg-white" src="svg0.svg" alt="Rocketseat logo">
                     </li>
                     <h2>Rocketseat</h2>
-                    <span class='username'>@luizmellodev</span>
+                    <span class='username'>@demo-16</span>
                 </a>
 
-                <a href="https://www.instagram.com/luizmello.dev/" target="_blank" rel="noopener">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #8e2de2, #e2c72d);">   
                     <i data-feather="instagram"></i>
                     </li>
                     <h2>Instagram</h2>
-                    <span class='username'>@luizmello.dev</span>
+                    <span class='username'>@@demo-16</span>
                 </a>
 
             </ul>
@@ -132,105 +132,105 @@
 
         <hr style="margin-top:10%;height:1px;border-width:0;color:white;background-color:gray">
 
-        <h1 class='titulo-sep'>Links úteis</h1>
+        <h1 class='titulo-sep'>Links ttteis</h1>
         <section>
             <ul>
-                <a href="https://caniuse.com/" target="_blank" rel="noopener">
+                <a href="##" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">EN</span>
                         <span class='uteis'>
-                            Can I use?
+                            @demo-16
                         </span>
                     </li>
                 </a>
-                <a href="https://medium.com/collabcode/pare-de-chutar-e-aprenda-como-funciona-flexbox-01-f75be5f35d3d" target="_blank" rel="noopener">
+                <a href="###" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">PT/BR</span>
                         <span class='uteis'>
-                            Artigo sobre Flexbox
+                            Artigo @demo-16
                         </span>
                     </li>
                 </a>
-                <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank" rel="noopener">
+                <a href="https://css-tricks.com/" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">EN</span>
                         <span class='uteis'>
-                            Artigo sobre Flexbox
+                            @demo-16
                         </span>
                     </li>
                 </a>
-                <a href="https://github.com/public-apis/public-apis" target="_blank" rel="noopener">
+                <a href="https://github.com/" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">EN</span>
                         <span class='uteis'>
-                            Coleções de APIs
+                            @demo-16
                         </span>
                     </li>
                 </a>
-                <a href="https://medium.com/luizalabs/entendendo-as-fun%C3%A7%C3%B5es-map-filter-e-reduce-2569888ae084" target="_blank" rel="noopener">
+                <a href="####" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">PT/BR</span>
                         <span class='uteis'>
-                            Map, Filter e Reduce
+                            @demo-16
                         </span>
                     </li>
                 </a>
-                <a href="https://youtu.be/kOt_DdAnMbc" target="_blank" rel="noopener">
+                <a href="https://youtube.com/" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">PT/BR</span>
                         <span class='uteis'>
-                            Biblioteca VS Framework
+                            @demo-16
                         </span>
                     </li>
                 </a>
-                 <a href="https://codepen.io/luizeduardomr/pen/yLVELvx" target="_blank" rel="noopener">
+                 <a href="https://codepen.io/" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">Reels</span>
                         <span class='uteis'>
-                            Animação CSS: Hacker!
+                            @demo-16
                         </span>
                     </li>
                 </a>
-                <a href="https://caiocnoronha.medium.com/programa%C3%A7%C3%A3o-orienta%C3%A7%C3%A3o-a-objetos-poo-759d96dda910" target="_blank" rel="noopener">
+                <a href="#####" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">PT/BR</span>
                         <span class='uteis'>
-                            Artigo sobre POO
+                            @demo-16
                         </span>
                     </li>
                 </a>
-  <a href="https://medium.com/desenvolvendo-com-paixao/o-que-%C3%A9-solid-o-guia-completo-para-voc%C3%AA-entender-os-5-princ%C3%ADpios-da-poo-2b937b3fc530" target="_blank" rel="noopener">
+  <a href="######" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">PT/BR</span>
                         <span class='uteis'>
-                            Princípio S.O.L.I.D
+                            @demo-16
                         </span>
                     </li>
                 </a>
-                <a href="https://medium.com/techrebels/git-para-dummies-a0cb9448dacf" target="_blank" rel="noopener">
+                <a href="#" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">PT/BR</span>
                         <span class='uteis'>
-                           Artigo sobre Git
+                            @demo-16
                         </span>
                     </li>
                 </a>
-           <a href="https://pingback.com/luizmello/swift-o-one-more-thingda-apple-que-agradou-milharesde-desenvolvedores" target="_blank" rel="noopener">
+           <a href="https://pingback.com/" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #8e2de2, #4a00e0);">
                         <span class="new">ARTIGO</span>
                         <span class='uteis'>
-                           Artigo sobre Swift
+                            @demo-16
                         </span>
                     </li>
                 </a>
