--- a/design-17/index.html
+++ b/design-17/index.html
@@ -61,20 +61,20 @@
     <footer>
         <div>
             <div style="text-align: center;">
-                <a href="https://github.com/harindulk" target="_blank" class="hover , links-footer">
+                <a href="https://github.com" target="_blank" class="hover , links-footer">
                     <i class="fab fa-github"></i></a>
 
-                <a href="https://www.linkedin.com/in/harindulk/" target="_blank" class="hover , links-footer">
+                <a href="https://www.linkedin.com/in/" target="_blank" class="hover , links-footer">
                     <i class="fab fa-linkedin"></i></a>
 
-                <a href="https://twitter.com/Harindu_Fonseka" target="_blank" class="hover , links-footer">
+                <a href="https://twitter.com/" target="_blank" class="hover , links-footer">
                     <i class="fab fa-twitter"></i></a>
 
-                <a href="https://www.youtube.com/channel/UCRyQGxzCgFb5wmsp1XAlWpQ" target="_blank"
+                <a href="https://www.youtube.com/" target="_blank"
                     class="hover , links-footer">
                     <i class="fab fa-youtube"></i></a>
 
-                <a href="mailto:Harindu.dev@outlook.com" class="hover , links-footer">
+                <a href="mailto:test.mail@lactus.tech" class="hover , links-footer">
                     <i class="fas fa-envelope"></i></a>
             </div>
         </div>
